--- a/src/main/resources/public/network.html
+++ b/src/main/resources/public/network.html
@@ -1,25 +1,31 @@
 <!doctype html>
 <html>
     <head>
-        <meta charset="utf-8">
-        <title>Network graph</title>
+        <title>Hydroangeas &bull; Graphique du réseau</title>
 
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+        <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+        <script type="text/javascript">
+            google.load("visualization", "1", {packages:["orgchart"]});
+            google.setOnLoadCallback(drawChart);
+
+            function drawChart()
+            {
+                var data = new google.visualization.DataTable();
+                data.addColumn('string', 'Name');
+                data.addColumn('string', 'Manager');
+
+                data.addRows([
+                    [{v:'Hydroangeas Server', f:'Hydroangeas Server<div style="color:green;">Serveur de contrôle</div>'}, ''],
+                    %DATA%
+                ]);
+
+                var chart = new google.visualization.OrgChart(document.getElementById('chart_div'));
+                chart.draw(data, {allowHtml:true});
+            }
+        </script>
     </head>
 
     <body>
-        <table class="table table-hover">
-            <thead>
-                <tr>
-                    <td><b>UUID</b></td>
-                    <td><b>IP</b></td>
-                    <td><b>Dedicated game</b></td>
-                </tr>
-            </thead>
-
-            <tbody>
-                %CLIENTS%
-            </tbody>
-        </table>
+        <div id="chart_div"></div>
     </body>
 </html>
